crates/hird-check/tests/snapshots/inference__same_typed_capabilities_collapse.snap
---
source: crates/hird-check/tests/inference.rs
assertion_line: 722
expression: "check_str(\"type Table<k, v, p> = MkTable\\n\\\n         effect EtsRead<t>\\n\\\n         fn query(\\n\\\n           t1: Table<Int, String, Bool>,\\n\\\n           t2: Table<Int, String, Bool>,\\n\\\n           r1: Table<Int, String, Bool> -> Int ! {EtsRead<t1>},\\n\\\n           r2: Table<Int, String, Bool> -> Int ! {EtsRead<t2>}\\n\\\n         ) -> Int ! {EtsRead<t1>} = let a = r1(t1) in r2(t2)\")"
---
MkTable : ∀a b c. Table<a, b, c>
query : Table<Int, String, Bool> → Table<Int, String, Bool> → (Table<Int, String, Bool> → Int ! {EtsRead<Table<Int, String, Bool>>}) → (Table<Int, String, Bool> → Int ! {EtsRead<Table<Int, String, Bool>>}) → Int ! {EtsRead<Table<Int, String, Bool>>}
