crates/hird-check/tests/snapshots/inference__sequential_lets_union_effects.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"effect Log\\n\\\n         effect Fork\\n\\\n         fn f(a: Int -> Int ! {Log}, b: Int -> Int ! {Fork}) -> Int ! {Log, Fork} =\\n\\\n           let x = a(0) in b(x)\")"
---
f : (Int → Int ! {Log}) → (Int → Int ! {Fork}) → Int ! {Fork, Log}
