crates/hird-check/tests/snapshots/inference__shadowing_warns.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn main() = let x = 1 in let x = 2 in x\")"
---
main : () → Int
warning[C0011] 29..30: binding `x` shadows an outer binding
