crates/hird-check/tests/snapshots/inference__signature_more_general_than_body.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn id(x: a) -> a = 1\")"
---
id : ∀a. a → a
error[C0001] 19..20: type mismatch: expected `a`, got `Int`
