crates/hird-check/tests/snapshots/inference__single_effect_on_signature.snap
---
source: crates/hird-check/tests/inference.rs
assertion_line: 542
expression: "check_str(\"effect Log\\n\\\n         fn log_it(run: Int -> Int ! {Log}) -> Int ! {Log} = run(0)\")"
---
log_it : (Int → Int ! {Log}) → Int ! {Log}
