crates/hird-check/tests/snapshots/inference__tuple_components_exhaustive.snap
---
source: crates/hird-check/tests/inference.rs
assertion_line: 422
expression: "check_str(\"fn f(p: (Bool, Bool)) -> Int = match p {\\n\\\n           (True, _) -> 1,\\n\\\n           (False, _) -> 0,\\n\\\n         }\")"
---
f : (Bool, Bool) → Int
